--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdx-js/loader": "3.1.0",
     "@next/mdx": "14.1.0",
+    "fuse.js": "^7.1.0",
     "next": "^15.3.3",
     "next-mdx-remote": "4.4.1",
     "react": "18.2.0",
