--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,15 +34,15 @@ jobs:
       - name: Checkout pytorch/docs repository
         uses: actions/checkout@v3
         with:
-          repository: Sidharth123-cpu/test-docs-site
+          repository: Sidharth123-cpu/test-docs-site # Changed to your test repo
           ref: site # The target branch in your test repo
           token: ${{ secrets.DOCS_REPO_TOKEN }} # Personal Access Token with repo scope
           path: pytorch-docs
 
       - name: Prepare deployment directory
         run: |
-          mkdir -p pytorch-docs/docs/repo/compile-graph-break
-          rsync -av --delete compile-graph-break-site/gbid_directory/ pytorch-docs/docs/repo/compile-graph-break/
+          mkdir -p pytorch-docs/
+          rsync -av --delete compile-graph-break-site/gbid_directory/ pytorch-docs/
         working-directory: ${{ github.workspace }}
 
       - name: Commit and Push to docs repo
@@ -51,6 +51,6 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "Deploy: Update compile-graph-break site" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.DOCS_REPO_TOKEN }}@github.com/Sidharth123-cpu/test-docs-site.git site
+          git commit -m "Deploy: Update compile-graph-break site (Test)" || echo "No changes to commit"
+          git push https://x-access-token:${{ secrets.DOCS_REPO_TOKEN }}@github.com/Sidharth123-cpu/test-docs-site.git site # Changed to your test repo
         working-directory: ${{ github.workspace }} 
