--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,17 +40,14 @@ jobs:
           path: pytorch-docs
 
       - name: Prepare deployment directory
-        run: |
-          mkdir -p pytorch-docs/
-          rsync -av --delete compile-graph-break-site/gbid_directory/ pytorch-docs/
+        run: rsync -av --delete compile-graph-break-site/gbid_directory/ pytorch-docs/
         working-directory: ${{ github.workspace }}
 
       - name: Commit and Push to docs repo
         run: |
-          cd pytorch-docs
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "Deploy: Update compile-graph-break site (Test)" || echo "No changes to commit"
           git push https://x-access-token:${{ secrets.DOCS_REPO_TOKEN }}@github.com/Sidharth123-cpu/test-docs-site.git site # Changed to your test repo
-        working-directory: ${{ github.workspace }} 
+        working-directory: pytorch-docs # Changed this line to ensure git commands run in the correct directory 
