--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,17 +5,17 @@ on:
     branches:
       - main
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '*/3 * * * *'
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout compile-graph-break-site
+      - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          path: compile-graph-break-site
+          fetch-depth: 0  # Fetch all history for proper git operations
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -23,23 +23,26 @@ jobs:
           python-version: '3.12'
 
       - name: Install dependencies
-        run: pip install pyyaml requests
-        working-directory: compile-graph-break-site
+        run: pip install requests
 
       - name: Build site
         run: python generate-site.py
-        working-directory: compile-graph-break-site
 
       - name: Create docs directory
         run: |
           mkdir -p docs
-          cp -r compile-graph-break-site/gbid_directory/* docs/
-        working-directory: ${{ github.workspace }}
+          cp -r gbid_directory/* docs/
+
+      - name: Deploy with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./docs
+          destination: ./_site
 
       - name: Commit and Push
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/
           git commit -m "Deploy: Update graph break site" || echo "No changes to commit"
           git push
